[package]
name = "rcgen"
version = "0.9.2"
authors = ["est31 <MTest31@outlook.com>"]
description = "Rust X.509 certificate generator"
repository = "https://github.com/est31/rcgen"
documentation = "https://docs.rs/rcgen"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rcgen"
path = "src/lib.rs"

[[bin]]
name = "rcgen"
path = "src/main.rs"
required-features = ["pem"]

[dependencies]
yasna = { version = "0.5", features = ["time", "std"] }
pem = { version = "1.0", optional = true }
time = { version = "0.3", default-features = false }
zeroize = { version = "1.2", optional = true }

[dependencies.ring]
git = "https://github.com/briansmith/ring.git"
rev = "95948b39"
# requires the latest version to have Ed25519 support on WASM
features = ["wasm32_unknown_unknown_js"]

[dependencies.x509-parser]
git = "https://github.com/wireapp/x509-parser"
tag = "v1.0.2-pre.core-crypto-0.6.0"
optional = true
features = ["verify"]

[features]
default = ["pem"]

[package.metadata.docs.rs]
features = ["x509-parser"]

[dev-dependencies]
rcgen = { path = ".", features = ["x509-parser"] }
webpki = { version = "0.22", features = ["std"] }
rand = "0.8"
rsa = "0.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
openssl = "0.10"

# This greatly speeds up rsa key generation times
# (only applies to the dev-dependency because cargo
# ignores profile overrides for non leaf packages)
[profile.dev.package.num-bigint-dig]
opt-level = 3
